--- a/package.json
+++ b/package.json
@@ -98,8 +98,12 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "mysql2": "^3.5.2",
+    "plaid": "^15.0.0",
+    "plaid-threads": "^14.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plaid-link": "^3.4.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
